--- a/themes/huxblog/layout/_partial/head.ejs
+++ b/themes/huxblog/layout/_partial/head.ejs
@@ -1,11 +1,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="google-site-verification" content="xBT4GhYoi5qRD5tr338pgPM5OWHHIDR6mNg1a3euekI" />
+    <meta name="google-site-verification" content="<%= config.google_site_verification %>" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="<%= config.description %>">
     <meta name="keyword"  content="<%= config.keyword %>">
     <link rel="shortcut icon" href="<%= config.root %>img/favicon.ico">
+
+    <%- partial('social-cards') %>
 
     <title>
         <% if (page.title) { %>
